second stage model

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 __pycache__/
-cache
-data
-input
-model
+.ipynb_checkpoints/
+catboost_info/
+
+/cache
+/data
+/input*
+/model
+/submission
+/meta
+
 *.py[cod]
+
+misc.ipynb
