--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,13 @@ opencv-python==4.1.1.26
 # pandas==0.23.4        
 # Pillow==6.2.0         
 pretrainedmodels==0.7.4         
-pydicom==1.4.0.dev0    
+# pydicom==1.4.0.dev0
+pydicom    
 # scikit-image==0.14.1        
 # scikit-learn==0.21.3        
 # scipy==1.3.1         
 # sklearn==0.0           
-# torch==1.1.0         
-# torchvision==0.3.0         
+torch==1.1.0         
+torchvision==0.3.0         
 tqdm==4.28.1        
 # xgboost==0.80          
