--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ opencv-python==4.1.1.26
 # Pillow==6.2.0         
 pretrainedmodels==0.7.4         
 # pydicom==1.4.0.dev0
-pydicom    
+pydicom
+gdcm
+pylibjpeg
 # scikit-image==0.14.1        
 # scikit-learn==0.21.3        
 # scipy==1.3.1         
