--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ services:
     init: true
     build:
       context: ./
-      dockerfile: jupyter.Dockerfile
+      dockerfile: Dockerfile
     env_file: ./.env
     ports:
       - 8888:8888
     volumes:
       - ${ROOT_DIR}:/code
-      - ${DATA_DIR}:/data
+      - ${DATA_DIR}:/code/input
     command:
       [
         "jupyter",
