--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ albumentations==0.3.3
 # kaggle==1.5.6         
 # lightgbm==2.2.2         
 # matplotlib==3.0.2         
-# numpy==1.15.4        
-opencv-python==4.1.1.26      
+numpy>=1.22        
+opencv-python-headless==4.5.5.64
 # pandas==0.23.4        
 # Pillow==6.2.0         
 pretrainedmodels==0.7.4         
@@ -14,12 +14,15 @@ pretrainedmodels==0.7.4
 pydicom
 gdcm
 pylibjpeg
+pylibjpeg-libjpeg
+pylibjpeg-openjpeg
 # scikit-image==0.14.1        
 # scikit-learn==0.21.3        
 # scipy==1.3.1         
 # sklearn==0.0           
-torch==1.1.0         
-torchvision==0.3.0         
+# torch==1.1.0         
+# torchvision==0.3.0         
 # tqdm==4.28.1 
-tqdm       
+tqdm
+addict
 # xgboost==0.80          
